--- a/Final Assignment Webscraping.ipynb
+++ b/Final Assignment Webscraping.ipynb
@@ -2,31 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center>\n",
     "    <img src=\"https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/Logos/organization_logo/organization_logo.png\" width=\"300\" alt=\"cognitiveclass.ai logo\"  />\n",
     "</center>\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<h1>Extracting Stock Data Using a Web Scraping</h1>\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Not all stock data is available via API in this assignment; you will use web-scraping to obtain financial data. You will be quizzed on your results.\\\n",
     "Using beautiful soup we will extract historical share data from a web-page.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<h2>Table of Contents</h2>\n",
     "<div class=\"alert alert-block alert-info\" style=\"margin-top: 20px\">\n",
@@ -40,91 +39,90 @@
     "</div>\n",
     "\n",
     "<hr>\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#!pip install pandas\n",
     "#!pip install requests\n",
     "# !pip install bs4\n",
     "#!pip install plotly"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import requests\n",
     "from bs4 import BeautifulSoup"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Using Webscraping to Extract Stock Data Example\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "First we must use the `request` library to downlaod the webpage, and extract the text. We will extract Netflix stock data <https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0220EN-SkillsNetwork/labs/project/netflix_data_webpage.html>.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "url = \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0220EN-SkillsNetwork/labs/project/netflix_data_webpage.html\"\n",
     "\n",
     "data  = requests.get(url).text"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Next we must parse the text into html using `beautiful_soup`\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "soup = BeautifulSoup(data, 'html5lib')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Now we can turn the html table into a pandas dataframe\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "netflix_data = pd.DataFrame(columns=[\"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Volume\"])\n",
     "\n",
@@ -142,21 +140,26 @@
     "    \n",
     "    # Finally we append the data of each row to the table\n",
     "    netflix_data = netflix_data.append({\"Date\":date, \"Open\":Open, \"High\":high, \"Low\":low, \"Close\":close, \"Adj Close\":adj_close, \"Volume\":volume}, ignore_index=True)    "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We can now print out the dataframe\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "source": [
+    "netflix_data.head()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -250,60 +253,62 @@
        "4  Feb 01, 2021  536.79  566.65  518.28  538.85   61,902,300    538.85"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 16
     }
    ],
-   "source": [
-    "netflix_data.head()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We can also use the pandas `read_html` function using the url\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "read_html_pandas_data = pd.read_html(url)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Or we can convert the BeautifulSoup object to a string\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "read_html_pandas_data = pd.read_html(str(soup))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Beacause there is only one table on the page, we just take the first table in the list returned\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "source": [
+    "netflix_dataframe = read_html_pandas_data[0]\n",
+    "\n",
+    "netflix_dataframe.head()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -397,96 +402,89 @@
        "4  Feb 01, 2021  536.79  566.65  518.28  538.85      538.85   61902300"
       ]
      },
-     "execution_count": 19,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 19
     }
    ],
-   "source": [
-    "netflix_dataframe = read_html_pandas_data[0]\n",
-    "\n",
-    "netflix_dataframe.head()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Using Webscraping to Extract Stock Data Exercise\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Use the `requests` library to download the webpage <https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0220EN-SkillsNetwork/labs/project/amazon_data_webpage.html>. Save the text of the response as a variable named `html_data`.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "url = \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0220EN-SkillsNetwork/labs/project/amazon_data_webpage.html\"\n",
     "html_data = requests.get(url).text"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Parse the html data using `beautiful_soup`.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "soup = BeautifulSoup(html_data, \"html5lib\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<b>Question 1</b> What is the content of the title attribute:\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "source": [
+    "soup.find(\"title\").text"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'Amazon.com, Inc. (AMZN) Stock Historical Prices & Data - Yahoo Finance'"
       ]
      },
-     "execution_count": 32,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 32
     }
    ],
-   "source": [
-    "soup.find(\"title\").text"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Using beautiful soup extract the table with historical share prices and store it into a dataframe named `amazon_data`. The dataframe should have columns Date, Open, High, Low, Close, Adj Close, and Volume. Fill in each variable with the correct data from the list `col`.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "amazon_data = pd.DataFrame(columns=[\"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Volume\"])\n",
     "\n",
@@ -501,21 +499,26 @@
     "    volume = col[6].text\n",
     "    \n",
     "    amazon_data = amazon_data.append({\"Date\":date, \"Open\":Open, \"High\":high, \"Low\":low, \"Close\":close, \"Adj Close\":adj_close, \"Volume\":volume}, ignore_index=True)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Print out the first five rows of the `amazon_data` dataframe you created.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "source": [
+    "amazon_data.head(5)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -609,106 +612,107 @@
        "4  Sep 01, 2020  3,489.58  3,552.25  2,871.00  3,148.73  115,899,300  3,148.73"
       ]
      },
-     "execution_count": 35,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 35
     }
    ],
-   "source": [
-    "amazon_data.head(5)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<b>Question 2</b> What is the name of the columns of the dataframe\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "source": [
+    "names_of_columns_in_df = [col for col in amazon_data.columns]\n",
+    "\", \".join(names_of_columns_in_df)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'Date, Open, High, Low, Close, Volume, Adj Close'"
       ]
      },
-     "execution_count": 40,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 40
     }
    ],
-   "source": [
-    "names_of_columns_in_df = [col for col in amazon_data.columns]\n",
-    "\", \".join(names_of_columns_in_df)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<b>Question 3</b> What is the `Open` of the last row of the amazon_data dataframe?\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "source": [
+    "amazon_data[\"Open\"].tail(1)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "60    656.29\n",
        "Name: Open, dtype: object"
       ]
      },
-     "execution_count": 51,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 51
     }
    ],
-   "source": [
-    "amazon_data[\"Open\"].tail(1)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "source": [
+    "\n",
+    "amazon_data[\"Open\"].iloc[-1]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'656.29'"
       ]
      },
-     "execution_count": 53,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 53
     }
    ],
-   "source": [
-    "\n",
-    "amazon_data[\"Open\"].iloc[-1]"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<h2>About the Authors:</h2> \n",
     "\n",
     "<a href=\"https://www.linkedin.com/in/joseph-s-50398b136/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0220ENSkillsNetwork23455606-2021-01-01\">Joseph Santarcangelo</a> has a PhD in Electrical Engineering, his research focused on using machine learning, signal processing, and computer vision to determine how videos impact human cognition. Joseph has been working for IBM since he completed his PhD.\n",
     "\n",
     "Azim Hirjani\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "source": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "## Change Log\n",
     "\n",
@@ -727,14 +731,14 @@
     "## <h3 align=\"center\"> © IBM Corporation 2020. All rights reserved. <h3/>\n",
     "\n",
     "<p>\n"
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit (conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -747,6 +751,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
+  },
+  "interpreter": {
+   "hash": "dba659b4a097e30efbb17220f0ca1b7d5db9e4aadd6fc7c650abc202c51799a6"
   }
  },
  "nbformat": 4,
